--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "src/server.ts",
   "scripts": {
     "start": "ts-node-dev --respawn --transpile-only src/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
+    "postinstall": "prisma generate"
   },
   "author": "Yeasin Shamim",
   "license": "ISC",
